--- a/report/rptBuktiRegister.jrxml
+++ b/report/rptBuktiRegister.jrxml
@@ -39,7 +39,7 @@ on reg_periksa.kd_dokter=dokter.kd_dokter and reg_periksa.no_rkm_medis=pasien.no
 
 	<field name="no_reg" class="java.lang.String"/>
 	<field name="no_rawat" class="java.lang.String"/>
-	<field name="tgl_registrasi" class="java.sql.Date"/>
+	<field name="tgl_registrasi" class="java.lang.String"/>
 	<field name="jam_reg" class="java.sql.Time"/>
 	<field name="kd_dokter" class="java.lang.String"/>
 	<field name="nm_dokter" class="java.lang.String"/>
@@ -293,7 +293,7 @@ on reg_periksa.kd_dokter=dokter.kd_dokter and reg_periksa.no_rkm_medis=pasien.no
 					<textElement lineSpacing="Single">
 						<font fontName="Tahoma" size="11"/>
 					</textElement>
-				<textFieldExpression   class="java.lang.String"><![CDATA[": "+$F{tgl_registrasi}+" "+$F{jam_reg}]]></textFieldExpression>
+				<textFieldExpression   class="java.lang.String"><![CDATA[": "+$F{tgl_registrasi}.split("-")[2]+"-"+$F{tgl_registrasi}.split("-")[1]+"-"+$F{tgl_registrasi}.split("-")[0]+" "+$F{jam_reg}]]></textFieldExpression>
 				</textField>
 				<staticText>
 					<reportElement
@@ -497,7 +497,7 @@ on reg_periksa.kd_dokter=dokter.kd_dokter and reg_periksa.no_rkm_medis=pasien.no
 					<textElement lineSpacing="Single">
 						<font fontName="Tahoma" size="11"/>
 					</textElement>
-				<textFieldExpression   class="java.lang.String"><![CDATA[": "+$F{tgl_lahir}]]></textFieldExpression>
+				<textFieldExpression   class="java.lang.String"><![CDATA[": "+$F{tgl_lahir}.split("-")[2]+"-"+$F{tgl_lahir}.split("-")[1]+"-"+$F{tgl_lahir}.split("-")[0]]]></textFieldExpression>
 				</textField>
 				<staticText>
 					<reportElement
